--- a/design_exploration/v2/designs gemini/index.html
+++ b/design_exploration/v2/designs gemini/index.html
@@ -3,103 +3,55 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>V2 Design Exploration Index</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet">
+  <title>Odin V2 Gemini Designs</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      min-height: 100vh;
-      background:
-        radial-gradient(900px 600px at -10% -30%, rgba(89, 122, 255, 0.28), transparent 62%),
-        radial-gradient(800px 500px at 110% 15%, rgba(83, 216, 255, 0.2), transparent 60%),
-        #080d17;
-      color: #e7edff;
-      font-family: "IBM Plex Mono", monospace;
-      padding: 18px;
-    }
-
-    .wrap {
-      max-width: 980px;
-      margin: 0 auto;
-      display: grid;
-      gap: 14px;
-    }
-
-    header {
-      border: 1px solid rgba(145, 172, 222, 0.35);
-      background: rgba(10, 17, 31, 0.9);
-      padding: 14px;
-      display: grid;
-      gap: 8px;
-    }
-
-    h1 {
-      margin: 0;
-      font-family: "Space Grotesk", sans-serif;
-      text-transform: uppercase;
-      letter-spacing: 0.06em;
-      font-size: clamp(1.25rem, 2.2vw, 1.8rem);
-    }
-
-    p {
-      margin: 0;
-      color: #b4c0dc;
-      line-height: 1.45;
-    }
-
-    .links {
-      display: grid;
-      gap: 8px;
-    }
-
-    a {
-      display: block;
-      border: 1px solid rgba(145, 172, 222, 0.35);
-      background: rgba(13, 21, 38, 0.94);
-      color: #ddecff;
-      text-decoration: none;
-      padding: 12px;
-      transition: border-color 160ms ease, transform 160ms ease;
-    }
-
-    a:hover {
-      border-color: #70dbff;
-      transform: translateY(-2px);
-    }
-
-    .sub {
-      color: #9bb3d7;
-      font-size: 0.85rem;
-      margin-top: 4px;
-    }
-
-    .back {
-      margin-top: 8px;
-    }
+    :root { --bg:#0c0f14; --panel:#141a22; --border:#2a3547; --text:#e8edf6; --text-dim:#a6b3c8; --radius:14px; }
+    * { box-sizing:border-box; }
+    body { margin:0; min-height:100vh; background:var(--bg); color:var(--text); font-family:Inter,"Segoe UI",Roboto,Helvetica,Arial,sans-serif; padding:16px; }
+    .layout { max-width:1240px; margin:0 auto; display:grid; grid-template-columns:280px minmax(0,1fr); gap:14px; align-items:start; }
+    .sidebar,.content { background:var(--panel); border:1px solid var(--border); border-radius:var(--radius); }
+    .sidebar { position:sticky; top:16px; padding:14px; display:grid; gap:12px; max-height:calc(100vh - 32px); overflow:auto; }
+    .sidebar h1 { margin:0; font-size:1.05rem; }
+    .sidebar p { margin:0; color:var(--text-dim); font-size:.9rem; }
+    .nav-group { display:grid; gap:8px; }
+    .nav-group strong { font-size:.85rem; color:var(--text-dim); text-transform:uppercase; letter-spacing:.06em; }
+    .nav-link { text-decoration:none; color:var(--text-dim); border:1px solid transparent; border-radius:8px; padding:7px 8px; display:block; }
+    .nav-link:hover,.nav-link.is-active { color:var(--text); border-color:var(--border); background:rgba(255,255,255,.03); }
+    .content { padding:16px; display:grid; gap:12px; }
+    .content h2 { margin:0; }
+    .intro { margin:0; color:var(--text-dim); }
+    .list { margin:0; padding:0; list-style:none; display:grid; gap:7px; }
+    .list a { text-decoration:none; color:var(--text-dim); border:1px solid transparent; border-radius:8px; display:block; padding:7px 8px; }
+    .list a:hover { color:var(--text); border-color:var(--border); background:rgba(255,255,255,.03); }
+    @media (max-width:980px){ .layout{ grid-template-columns:1fr; } .sidebar{ position:static; max-height:none; } }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <h1>V2 Exploration: 5 New Directional Designs</h1>
-      <p>Same corrected UX flow, five separate files, clean-edge modern visual systems, AAA-inspired narratives without store-style caricatures.</p>
-      <p class="back"><a href="../../index.html">Open design explorer</a></p>
-      <p class="back"><a href="../../v1/designs_gpt/index.html">Open GPT set 02 + set 03 designs</a></p>
-    </header>
+  <main class="layout">
+    <aside class="sidebar">
+      <h1>Odin Design Nav</h1>
+      <p>Persistent set navigation.</p>
+      <nav class="nav-group">
+        <strong>Sections</strong>
+        <a class="nav-link" href="../../index.html">Explorer Home</a>
+        <a class="nav-link" href="../../v1/designs_gpt/index.html">V1 GPT</a>
+        <a class="nav-link" href="../../v1/designs_claude/index.html">V1 Claude</a>
+        <a class="nav-link" href="../../v1/designs_gemini/index.html">V1 Gemini</a>
+        <a class="nav-link is-active" href="./index.html">V2 Gemini</a>
+      </nav>
+    </aside>
 
-    <section class="links">
-      <a href="./design-01-blacksite-command.html">Design 01 - Blacksite Command<div class="sub">Stealth-action mission loop, restrained high-contrast console language.</div></a>
-      <a href="./design-02-pitwall-protocol.html">Design 02 - Pitwall Protocol<div class="sub">Racing-sim control board, precision tempo and run consistency framing.</div></a>
-      <a href="./design-03-expedition-rig.html">Design 03 - Expedition Rig<div class="sub">Survival systems interface, calibration chain progression.</div></a>
-      <a href="./design-04-heist-ledger.html">Design 04 - Heist Ledger<div class="sub">Tactical-heist operation sheet, objective-locked workflow.</div></a>
-      <a href="./design-05-orbit-protocol.html">Design 05 - Orbit Protocol<div class="sub">Space strategy command deck with minimal visual noise.</div></a>
+    <section class="content">
+      <h2>V2 Gemini Designs</h2>
+      <p class="intro">5 designs. Use the sidebar to switch sets anytime.</p>
+      <ul class="list">
+        <li><a href="./design-01-blacksite-command.html">01 - Blacksite Command</a></li>
+        <li><a href="./design-02-pitwall-protocol.html">02 - Pitwall Protocol</a></li>
+        <li><a href="./design-03-expedition-rig.html">03 - Expedition Rig</a></li>
+        <li><a href="./design-04-heist-ledger.html">04 - Heist Ledger</a></li>
+        <li><a href="./design-05-orbit-protocol.html">05 - Orbit Protocol</a></li>
+      </ul>
     </section>
-  </div>
+  </main>
 </body>
 </html>
