--- a/design_exploration/v1/designs_gpt/index.html
+++ b/design_exploration/v1/designs_gpt/index.html
@@ -3,260 +3,60 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GPT Design Exploration - Set 02 + Set 03</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&family=Oxanium:wght@500;700&display=swap" rel="stylesheet">
+  <title>Odin V1 GPT Designs</title>
   <style>
-    * { box-sizing: border-box; }
-
-    :root {
-      --bg: #070a10;
-      --panel: rgba(12, 18, 30, 0.92);
-      --panel-2: rgba(10, 16, 28, 0.95);
-      --line: rgba(170, 205, 255, 0.22);
-      --line-strong: rgba(170, 205, 255, 0.38);
-      --text: #eaf2ff;
-      --dim: rgba(234, 242, 255, 0.72);
-      --accent: #7bf2c7;
-      --accent-2: #ffd178;
-      --shadow: 0 18px 50px rgba(0, 0, 0, 0.48);
-      --focus: 0 0 0 3px rgba(123, 242, 199, 0.25);
-      --radius: 14px;
-    }
-
-    html { -webkit-font-smoothing: antialiased; }
-
-    body {
-      margin: 0;
-      min-height: 100vh;
-      color: var(--text);
-      font-family: "Atkinson Hyperlegible", system-ui, -apple-system, sans-serif;
-      padding: 18px;
-      background:
-        radial-gradient(1000px 700px at 10% -20%, rgba(123, 242, 199, 0.18), transparent 62%),
-        radial-gradient(900px 600px at 110% 10%, rgba(255, 209, 120, 0.14), transparent 62%),
-        linear-gradient(180deg, #070a10 0%, #05070b 100%);
-    }
-
-    a { color: inherit; text-decoration: none; }
-
-    a:focus-visible {
-      outline: none;
-      box-shadow: var(--focus);
-      border-radius: 10px;
-    }
-
-    .wrap {
-      max-width: 980px;
-      margin: 0 auto;
-      display: grid;
-      gap: 14px;
-    }
-
-    header {
-      border: 1px solid var(--line);
-      border-radius: var(--radius);
-      background: var(--panel);
-      box-shadow: var(--shadow);
-      padding: 14px;
-      display: grid;
-      gap: 8px;
-    }
-
-    h1 {
-      margin: 0;
-      font-family: "Oxanium", sans-serif;
-      letter-spacing: 0.06em;
-      text-transform: uppercase;
-      font-size: clamp(1.2rem, 2.2vw, 1.7rem);
-    }
-
-    p {
-      margin: 0;
-      color: var(--dim);
-      line-height: 1.5;
-    }
-
-    .nav {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin-top: 6px;
-    }
-
-    .chip {
-      border: 1px solid var(--line);
-      background: rgba(255, 255, 255, 0.06);
-      padding: 8px 10px;
-      border-radius: 999px;
-      font-weight: 700;
-      letter-spacing: 0.02em;
-      font-size: 0.9rem;
-    }
-
-    .chip:hover {
-      border-color: var(--line-strong);
-      background: rgba(255, 255, 255, 0.1);
-    }
-
-    .grid {
-      display: grid;
-      gap: 10px;
-    }
-
-    .card {
-      border: 1px solid var(--line);
-      border-radius: var(--radius);
-      background: var(--panel-2);
-      padding: 14px;
-      display: grid;
-      gap: 8px;
-      transition: transform 160ms ease, border-color 160ms ease, background 160ms ease;
-    }
-
-    .card:hover {
-      transform: translateY(-2px);
-      border-color: var(--line-strong);
-      background: rgba(14, 20, 34, 0.95);
-    }
-
-    .title {
-      display: flex;
-      align-items: baseline;
-      justify-content: space-between;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-
-    .title strong {
-      font-family: "Oxanium", sans-serif;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-    }
-
-    .tag {
-      font-size: 0.82rem;
-      color: var(--dim);
-    }
-
-    .desc {
-      color: var(--dim);
-      line-height: 1.45;
-    }
-
-    .accent {
-      height: 2px;
-      border-radius: 999px;
-      background: linear-gradient(90deg, var(--accent), var(--accent-2));
-      opacity: 0.85;
-    }
+    :root { --bg:#0c0f14; --panel:#141a22; --border:#2a3547; --text:#e8edf6; --text-dim:#a6b3c8; --accent:#7eb4ff; --accent-soft:#1e2f47; --radius:14px; }
+    * { box-sizing:border-box; }
+    body { margin:0; min-height:100vh; background:var(--bg); color:var(--text); font-family:Inter,"Segoe UI",Roboto,Helvetica,Arial,sans-serif; padding:16px; }
+    .layout { max-width:1240px; margin:0 auto; display:grid; grid-template-columns:280px minmax(0,1fr); gap:14px; align-items:start; }
+    .sidebar,.content { background:var(--panel); border:1px solid var(--border); border-radius:var(--radius); }
+    .sidebar { position:sticky; top:16px; padding:14px; display:grid; gap:12px; max-height:calc(100vh - 32px); overflow:auto; }
+    .sidebar h1 { margin:0; font-size:1.05rem; }
+    .sidebar p { margin:0; color:var(--text-dim); font-size:.9rem; }
+    .nav-group { display:grid; gap:8px; }
+    .nav-group strong { font-size:.85rem; color:var(--text-dim); text-transform:uppercase; letter-spacing:.06em; }
+    .nav-link { text-decoration:none; color:var(--text-dim); border:1px solid transparent; border-radius:8px; padding:7px 8px; display:block; }
+    .nav-link:hover,.nav-link.is-active { color:var(--text); border-color:var(--border); background:rgba(255,255,255,.03); }
+    .content { padding:16px; display:grid; gap:12px; }
+    .content h2 { margin:0; }
+    .intro { margin:0; color:var(--text-dim); }
+    .list { margin:0; padding:0; list-style:none; display:grid; gap:7px; }
+    .list a { text-decoration:none; color:var(--text-dim); border:1px solid transparent; border-radius:8px; display:block; padding:7px 8px; }
+    .list a:hover { color:var(--text); border-color:var(--border); background:rgba(255,255,255,.03); }
+    @media (max-width:980px){ .layout{ grid-template-columns:1fr; } .sidebar{ position:static; max-height:none; } }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <h1>GPT Designs - Set 02 + Set 03</h1>
-      <p>Ten dark, readability-first, low-friction game-style UI directions. Built on the shared simulator with rest timer defaulting to 3 seconds for this set.</p>
-      <nav class="nav" aria-label="Navigation">
-        <a class="chip" href="../../index.html">Design explorer</a>
-        <a class="chip" href="../../v2/designs%20gemini/index.html">v2 designs</a>
-        <a class="chip" href="../designs_claude/index.html">Claude designs</a>
-        <a class="chip" href="../designs_gemini/index.html">Gemini designs</a>
+  <main class="layout">
+    <aside class="sidebar">
+      <h1>Odin Design Nav</h1>
+      <p>Persistent set navigation.</p>
+      <nav class="nav-group">
+        <strong>Sections</strong>
+        <a class="nav-link" href="../../index.html">Explorer Home</a>
+        <a class="nav-link is-active" href="./index.html">V1 GPT</a>
+        <a class="nav-link" href="../designs_claude/index.html">V1 Claude</a>
+        <a class="nav-link" href="../designs_gemini/index.html">V1 Gemini</a>
+        <a class="nav-link" href="../../v2/designs%20gemini/index.html">V2 Gemini</a>
       </nav>
-    </header>
+    </aside>
 
-    <section class="grid" aria-label="Design list">
-      <a class="card" href="design-06-quiet-command.html">
-        <div class="title">
-          <strong>06 - Quiet Command</strong>
-          <span class="tag">Tactical strategy</span>
-        </div>
-        <div class="accent"></div>
-        <p class="desc">Dark, restrained command interface tuned for fast scanning and minimal friction.</p>
-      </a>
-
-      <a class="card" href="design-07-signal-lane.html">
-        <div class="title">
-          <strong>07 - Signal Lane</strong>
-          <span class="tag">Action rhythm</span>
-        </div>
-        <div class="accent"></div>
-        <p class="desc">Beat-lane pacing concept with clear hierarchy and zero decorative overload.</p>
-      </a>
-
-      <a class="card" href="design-08-night-vector.html">
-        <div class="title">
-          <strong>08 - Night Vector</strong>
-          <span class="tag">Navigation sim</span>
-        </div>
-        <div class="accent"></div>
-        <p class="desc">Waypoint-centric nighttime palette emphasizing legibility and calm control.</p>
-      </a>
-
-      <a class="card" href="design-09-core-discipline.html">
-        <div class="title">
-          <strong>09 - Core Discipline</strong>
-          <span class="tag">Arena combat</span>
-        </div>
-        <div class="accent"></div>
-        <p class="desc">Training-chain framing with bold contrast and one-action-at-a-time flow.</p>
-      </a>
-
-      <a class="card" href="design-10-minimal-frontier.html">
-        <div class="title">
-          <strong>10 - Minimal Frontier</strong>
-          <span class="tag">Exploration</span>
-        </div>
-        <div class="accent"></div>
-        <p class="desc">Quiet sci-fi structure where each panel has one job and reads instantly.</p>
-      </a>
-
-      <a class="card" href="design-01-mech-bay-calibration.html">
-        <div class="title">
-          <strong>01 - Mech Bay Calibration</strong>
-          <span class="tag">Hangar checklist</span>
-        </div>
-        <div class="accent"></div>
-        <p class="desc">Industrial maintenance UI: calm hierarchy, clear action focus, zero novelty noise.</p>
-      </a>
-
-      <a class="card" href="design-02-rhythm-grid.html">
-        <div class="title">
-          <strong>02 - Rhythm Grid</strong>
-          <span class="tag">Sequencer cadence</span>
-        </div>
-        <div class="accent"></div>
-        <p class="desc">A step-lane rhythm feel that reinforces set cadence without neon-cyber cliches.</p>
-      </a>
-
-      <a class="card" href="design-03-topo-ascent.html">
-        <div class="title">
-          <strong>03 - Topo Ascent</strong>
-          <span class="tag">Night navigation</span>
-        </div>
-        <div class="accent"></div>
-        <p class="desc">Topographic contour lines and waypoint logic. Looks like a tool, feels like a game.</p>
-      </a>
-
-      <a class="card" href="design-04-reactor-room.html">
-        <div class="title">
-          <strong>04 - Reactor Room</strong>
-          <span class="tag">Energy management</span>
-        </div>
-        <div class="accent"></div>
-        <p class="desc">Power-routing framing with warm metal accents. Big targets, minimal reading.</p>
-      </a>
-
-      <a class="card" href="design-05-drift-training.html">
-        <div class="title">
-          <strong>05 - Drift Training</strong>
-          <span class="tag">Ghost laps</span>
-        </div>
-        <div class="accent"></div>
-        <p class="desc">A racing practice vibe without “pit wall dashboard” tropes: smooth, quiet, decisive.</p>
-      </a>
+    <section class="content">
+      <h2>V1 GPT Designs</h2>
+      <p class="intro">10 designs. Use the sidebar to switch sets anytime.</p>
+      <ul class="list">
+        <li><a href="./design-01-mech-bay-calibration.html">01 - Mech Bay Calibration</a></li>
+        <li><a href="./design-02-rhythm-grid.html">02 - Rhythm Grid</a></li>
+        <li><a href="./design-03-topo-ascent.html">03 - Topo Ascent</a></li>
+        <li><a href="./design-04-reactor-room.html">04 - Reactor Room</a></li>
+        <li><a href="./design-05-drift-training.html">05 - Drift Training</a></li>
+        <li><a href="./design-06-quiet-command.html">06 - Quiet Command</a></li>
+        <li><a href="./design-07-signal-lane.html">07 - Signal Lane</a></li>
+        <li><a href="./design-08-night-vector.html">08 - Night Vector</a></li>
+        <li><a href="./design-09-core-discipline.html">09 - Core Discipline</a></li>
+        <li><a href="./design-10-minimal-frontier.html">10 - Minimal Frontier</a></li>
+      </ul>
     </section>
-  </div>
+  </main>
 </body>
 </html>
