--- a/design_exploration/index.html
+++ b/design_exploration/index.html
@@ -3,204 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Odin Design Previewer</title>
-  <style>
-    :root {
-      --bg: #0c0f14;
-      --panel: #141a22;
-      --panel-2: #1a2230;
-      --border: #2a3547;
-      --text: #e8edf6;
-      --text-dim: #a6b3c8;
-      --accent: #7eb4ff;
-      --accent-soft: #1e2f47;
-      --radius: 14px;
-    }
-
-    * { box-sizing: border-box; }
-
-    body {
-      margin: 0;
-      min-height: 100vh;
-      padding: 14px;
-      background: var(--bg);
-      color: var(--text);
-      font-family: Inter, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    }
-
-    .layout {
-      max-width: 1400px;
-      margin: 0 auto;
-      display: grid;
-      grid-template-columns: 340px minmax(0, 1fr);
-      gap: 14px;
-      height: calc(100vh - 28px);
-    }
-
-    .sidebar,
-    .preview-wrap {
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      background: var(--panel);
-      overflow: hidden;
-    }
-
-    .sidebar {
-      display: grid;
-      grid-template-rows: auto auto 1fr;
-      min-height: 0;
-    }
-
-    .head {
-      padding: 12px;
-      border-bottom: 1px solid var(--border);
-      display: grid;
-      gap: 6px;
-    }
-
-    .head h1 {
-      margin: 0;
-      font-size: 1rem;
-    }
-
-    .head p {
-      margin: 0;
-      color: var(--text-dim);
-      font-size: 0.86rem;
-    }
-
-    .tabs {
-      padding: 10px;
-      border-bottom: 1px solid var(--border);
-      display: flex;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
-
-    .tab {
-      border: 1px solid var(--border);
-      background: var(--panel-2);
-      color: var(--text);
-      border-radius: 999px;
-      padding: 7px 12px;
-      font-weight: 600;
-      cursor: pointer;
-    }
-
-    .tab.is-active {
-      border-color: var(--accent);
-      background: var(--accent-soft);
-    }
-
-    .tree {
-      min-height: 0;
-      overflow: auto;
-      padding: 10px;
-      display: grid;
-      gap: 12px;
-      align-content: start;
-    }
-
-    .group {
-      display: grid;
-      gap: 6px;
-    }
-
-    .group h2 {
-      margin: 0;
-      font-size: 0.78rem;
-      color: var(--text-dim);
-      letter-spacing: 0.07em;
-      text-transform: uppercase;
-      padding: 0 4px;
-    }
-
-    .design-btn {
-      width: 100%;
-      text-align: left;
-      border: 1px solid transparent;
-      border-radius: 8px;
-      background: transparent;
-      color: var(--text-dim);
-      padding: 8px;
-      cursor: pointer;
-      font: inherit;
-    }
-
-    .design-btn:hover,
-    .design-btn.is-active {
-      color: var(--text);
-      border-color: var(--border);
-      background: rgba(255, 255, 255, 0.04);
-    }
-
-    .preview-wrap {
-      display: grid;
-      grid-template-rows: auto 1fr;
-      min-height: 0;
-    }
-
-    .preview-head {
-      border-bottom: 1px solid var(--border);
-      padding: 10px 12px;
-      display: flex;
-      justify-content: space-between;
-      gap: 10px;
-      align-items: center;
-      flex-wrap: wrap;
-      font-size: 0.88rem;
-      color: var(--text-dim);
-    }
-
-    .preview-head strong {
-      color: var(--text);
-      font-size: 0.92rem;
-    }
-
-    .open-link {
-      text-decoration: none;
-      border: 1px solid var(--border);
-      color: var(--text);
-      background: var(--panel-2);
-      border-radius: 8px;
-      padding: 6px 10px;
-      font-weight: 600;
-    }
-
-    .open-link:hover {
-      border-color: var(--accent);
-      background: var(--accent-soft);
-    }
-
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: 0;
-      background: #0b0f17;
-    }
-
-    @media (max-width: 980px) {
-      body { padding: 10px; }
-      .layout {
-        grid-template-columns: 1fr;
-        height: auto;
-        min-height: calc(100vh - 20px);
-      }
-      .sidebar {
-        max-height: 44vh;
-      }
-      .preview-wrap {
-        min-height: 52vh;
-      }
-    }
-  </style>
+  <title>Design Previewer</title>
+  <link rel="stylesheet" href="./design_previewer/previewer.css">
 </head>
 <body>
   <main class="layout">
     <aside class="sidebar" aria-label="Design navigation">
       <section class="head">
-        <h1>Odin Design Previewer</h1>
-        <p>Sidebar stays fixed. Clicking designs only updates the preview panel.</p>
+        <h1 id="appTitle">Design Previewer</h1>
+        <p id="appDescription">Discover and preview designs without leaving this page.</p>
       </section>
       <nav id="tabs" class="tabs" aria-label="Version tabs"></nav>
       <section id="tree" class="tree" aria-label="Design list"></section>
@@ -219,146 +30,8 @@
   </main>
 
   <script>
-    const DATA = [
-      {
-        key: "v1",
-        label: "V1",
-        groups: [
-          {
-            label: "GPT",
-            items: [
-              ["01 - Mech Bay Calibration", "./v1/designs_gpt/design-01-mech-bay-calibration.html"],
-              ["02 - Rhythm Grid", "./v1/designs_gpt/design-02-rhythm-grid.html"],
-              ["03 - Topo Ascent", "./v1/designs_gpt/design-03-topo-ascent.html"],
-              ["04 - Reactor Room", "./v1/designs_gpt/design-04-reactor-room.html"],
-              ["05 - Drift Training", "./v1/designs_gpt/design-05-drift-training.html"],
-              ["06 - Quiet Command", "./v1/designs_gpt/design-06-quiet-command.html"],
-              ["07 - Signal Lane", "./v1/designs_gpt/design-07-signal-lane.html"],
-              ["08 - Night Vector", "./v1/designs_gpt/design-08-night-vector.html"],
-              ["09 - Core Discipline", "./v1/designs_gpt/design-09-core-discipline.html"],
-              ["10 - Minimal Frontier", "./v1/designs_gpt/design-10-minimal-frontier.html"]
-            ]
-          },
-          {
-            label: "Claude",
-            items: [
-              ["01 - Brutalist Terminal", "./v1/designs_claude/design-01-brutalist-terminal.html"],
-              ["02 - Luxury Editorial", "./v1/designs_claude/design-02-luxury-editorial.html"],
-              ["03 - Industrial Blueprint", "./v1/designs_claude/design-03-industrial-blueprint.html"],
-              ["04 - Analog Cassette", "./v1/designs_claude/design-04-analog-cassette.html"],
-              ["05 - Swiss Modernist", "./v1/designs_claude/design-05-swiss-modernist.html"],
-              ["06 - Tactical HUD", "./v1/designs_claude/design-06-tactical-hud.html"],
-              ["07 - Neon Arcade", "./v1/designs_claude/design-07-neon-arcade.html"],
-              ["08 - Mission Control", "./v1/designs_claude/design-08-mission-control.html"],
-              ["09 - Stealth Protocol", "./v1/designs_claude/design-09-stealth-protocol.html"],
-              ["10 - Racing Telemetry", "./v1/designs_claude/design-10-racing-telemetry.html"]
-            ]
-          },
-          {
-            label: "Gemini",
-            items: [
-              ["01 - Cyber Deck", "./v1/designs_gemini/design-01-cyber-deck.html"],
-              ["02 - Field Ops", "./v1/designs_gemini/design-02-field-ops.html"],
-              ["03 - Flight HUD", "./v1/designs_gemini/design-03-flight-hud.html"],
-              ["04 - Atelier", "./v1/designs_gemini/design-04-atelier.html"],
-              ["05 - Brutalist Raw", "./v1/designs_gemini/design-05-brutalist-raw.html"],
-              ["06 - Obsidian", "./v1/designs_gemini/design-06-obsidian.html"],
-              ["07 - Holo Field", "./v1/designs_gemini/design-07-holo-field.html"],
-              ["08 - Terminal Velocity", "./v1/designs_gemini/design-08-terminal-velocity.html"],
-              ["09 - Rune Stone", "./v1/designs_gemini/design-09-rune-stone.html"],
-              ["10 - Deep Dive", "./v1/designs_gemini/design-10-deep-dive.html"]
-            ]
-          }
-        ]
-      },
-      {
-        key: "v2",
-        label: "V2",
-        groups: [
-          {
-            label: "Gemini",
-            items: [
-              ["01 - Blacksite Command", "./v2/designs%20gemini/design-01-blacksite-command.html"],
-              ["02 - Pitwall Protocol", "./v2/designs%20gemini/design-02-pitwall-protocol.html"],
-              ["03 - Expedition Rig", "./v2/designs%20gemini/design-03-expedition-rig.html"],
-              ["04 - Heist Ledger", "./v2/designs%20gemini/design-04-heist-ledger.html"],
-              ["05 - Orbit Protocol", "./v2/designs%20gemini/design-05-orbit-protocol.html"]
-            ]
-          }
-        ]
-      }
-    ];
-
-    const tabsEl = document.getElementById("tabs");
-    const treeEl = document.getElementById("tree");
-    const previewEl = document.getElementById("preview");
-    const activeTitleEl = document.getElementById("activeTitle");
-    const activePathEl = document.getElementById("activePath");
-    const openDirectEl = document.getElementById("openDirect");
-
-    let activeTab = DATA[0].key;
-    let activePath = DATA[0].groups[0].items[0][1];
-
-    function setPreview(title, path) {
-      activePath = path;
-      activeTitleEl.textContent = title;
-      activePathEl.textContent = path;
-      openDirectEl.href = path;
-      previewEl.src = path;
-      renderTree();
-    }
-
-    function renderTabs() {
-      tabsEl.innerHTML = DATA.map((tab) => {
-        const activeClass = tab.key === activeTab ? "is-active" : "";
-        return `<button class="tab ${activeClass}" type="button" data-tab="${tab.key}">${tab.label}</button>`;
-      }).join("");
-    }
-
-    function renderTree() {
-      const tab = DATA.find((entry) => entry.key === activeTab);
-      if (!tab) {
-        treeEl.innerHTML = "";
-        return;
-      }
-
-      treeEl.innerHTML = tab.groups.map((group) => {
-        const itemHtml = group.items.map(([title, path]) => {
-          const activeClass = path === activePath ? "is-active" : "";
-          return `<button class="design-btn ${activeClass}" type="button" data-title="${title}" data-path="${path}">${title}</button>`;
-        }).join("");
-
-        return `<section class="group"><h2>${group.label}</h2>${itemHtml}</section>`;
-      }).join("");
-    }
-
-    tabsEl.addEventListener("click", (event) => {
-      const button = event.target.closest("[data-tab]");
-      if (!button) {
-        return;
-      }
-
-      activeTab = button.dataset.tab;
-      const tab = DATA.find((entry) => entry.key === activeTab);
-      const first = tab && tab.groups[0] && tab.groups[0].items[0];
-      if (first) {
-        setPreview(first[0], first[1]);
-      }
-      renderTabs();
-    });
-
-    treeEl.addEventListener("click", (event) => {
-      const button = event.target.closest("[data-path]");
-      if (!button) {
-        return;
-      }
-
-      setPreview(button.dataset.title || "Design", button.dataset.path);
-    });
-
-    renderTabs();
-    renderTree();
-    setPreview("01 - Mech Bay Calibration", "./v1/designs_gpt/design-01-mech-bay-calibration.html");
+    window.DESIGN_PREVIEWER_MANIFEST_PATH = "./design_previewer/manifest.json";
   </script>
+  <script src="./design_previewer/previewer.js"></script>
 </body>
 </html>
